Update InfrastructureStack.java